@@ -1549,3 +1549,9 @@ Start... early ages
 - aes/optimize.c : sound() can now be disabled. (THH)
 - desk/deskact.c : Fixed drawing problems while dragging one icon on another
   one in the "Desktop 1.2" mode. (THH)
+
+2003-08-28
+- desk/desk_rsc.* desk/desk1.c desk/desksupp.c : Added some missing information
+  and warning strings for the "Desktop 1.2" mode. (THH)
+- Makefile : The "Desktop 1.2" mode is now enabled by default. (THH)
+
